--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   image_picker:
   fluttertoast: ^8.2.12
   flutter_plugin_android_lifecycle:
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.1
+  cloud_firestore: ^6.0.0
 
 
 dev_dependencies:
