--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.3
-  image_picker:
   fluttertoast: ^8.2.12
   flutter_plugin_android_lifecycle:
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.1
   cloud_firestore: ^6.0.0
+  intl: ^0.20.2
+  image_picker: ^1.2.0
 
 
 dev_dependencies:
