--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^6.0.0
   intl: ^0.20.2
   image_picker: ^1.2.0
+  google_mobile_ads: ^6.0.0
 
 
 dev_dependencies:
